--- a/YS/YS.vcxproj.filters
+++ b/YS/YS.vcxproj.filters
@@ -120,5 +120,44 @@
     <ClCompile Include="5일차.cpp">
       <Filter>소스 파일\예습</Filter>
     </ClCompile>
+    <ClCompile Include="5일차_2.cpp">
+      <Filter>소스 파일\예습</Filter>
+    </ClCompile>
+    <ClCompile Include="day6_1.cpp">
+      <Filter>소스 파일\0116%286일차%29</Filter>
+    </ClCompile>
+    <ClCompile Include="day6_2.cpp">
+      <Filter>소스 파일\0116%286일차%29</Filter>
+    </ClCompile>
+    <ClCompile Include="day6_문제2.cpp">
+      <Filter>소스 파일\0116%286일차%29</Filter>
+    </ClCompile>
+    <ClCompile Include="day6_문제3.cpp">
+      <Filter>소스 파일\0116%286일차%29</Filter>
+    </ClCompile>
+    <ClCompile Include="day6_문제3_2.cpp">
+      <Filter>소스 파일\0116%286일차%29</Filter>
+    </ClCompile>
+    <ClCompile Include="day6_문제4예제.cpp">
+      <Filter>소스 파일\0116%286일차%29</Filter>
+    </ClCompile>
+    <ClCompile Include="day6_문제4.cpp">
+      <Filter>소스 파일\0116%286일차%29</Filter>
+    </ClCompile>
+    <ClCompile Include="day6_문제5예제.cpp">
+      <Filter>소스 파일\0116%286일차%29</Filter>
+    </ClCompile>
+    <ClCompile Include="day6_문제5.cpp">
+      <Filter>소스 파일\0116%286일차%29</Filter>
+    </ClCompile>
+    <ClCompile Include="day6_연습문제_변위.cpp">
+      <Filter>소스 파일\0116%286일차%29</Filter>
+    </ClCompile>
+    <ClCompile Include="6일차복습.cpp">
+      <Filter>소스 파일\복습</Filter>
+    </ClCompile>
+    <ClCompile Include="6일차복습_2.cpp">
+      <Filter>소스 파일\복습</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
