7일차(0118) 당일 복습 끝

--- a/YS/YS.vcxproj
+++ b/YS/YS.vcxproj
@@ -157,6 +157,7 @@
     <ClCompile Include="6일차복습_3.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="7일차복습.cpp" />
     <ClCompile Include="day1_1.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
