--- a/YS/YS.vcxproj.filters
+++ b/YS/YS.vcxproj.filters
@@ -195,5 +195,8 @@
     <ClCompile Include="day7_bingo.cpp">
       <Filter>소스 파일\0118%287일차%29</Filter>
     </ClCompile>
+    <ClCompile Include="7일차복습.cpp">
+      <Filter>소스 파일\복습</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
