--- a/YS/YS.vcxproj.filters
+++ b/YS/YS.vcxproj.filters
@@ -46,6 +46,12 @@
     <Filter Include="소스 파일\0120%288일차%29">
       <UniqueIdentifier>{4a1fbdb7-308d-4731-bea7-6c2ad31196cb}</UniqueIdentifier>
     </Filter>
+    <Filter Include="소스 파일\0125%289일차%29">
+      <UniqueIdentifier>{a13a6de9-fd19-435c-aee5-863b80f06681}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="소스 파일\0126%2810일차%29">
+      <UniqueIdentifier>{90ae7cff-abba-435f-8043-eea7805ff5b7}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="day1_1.cpp">
@@ -168,9 +174,6 @@
     <ClCompile Include="6일차.cpp">
       <Filter>소스 파일\예습</Filter>
     </ClCompile>
-    <ClCompile Include="wrap.cpp">
-      <Filter>소스 파일\예습</Filter>
-    </ClCompile>
     <ClCompile Include="day7_offset.cpp">
       <Filter>소스 파일\0118%287일차%29</Filter>
     </ClCompile>
@@ -196,6 +199,24 @@
       <Filter>소스 파일\0118%287일차%29</Filter>
     </ClCompile>
     <ClCompile Include="7일차복습.cpp">
+      <Filter>소스 파일\복습</Filter>
+    </ClCompile>
+    <ClCompile Include="7일차.cpp">
+      <Filter>소스 파일\예습</Filter>
+    </ClCompile>
+    <ClCompile Include="7일차_어망투망.cpp">
+      <Filter>소스 파일\예습</Filter>
+    </ClCompile>
+    <ClCompile Include="7일차_spiral.cpp">
+      <Filter>소스 파일\복습</Filter>
+    </ClCompile>
+    <ClCompile Include="day8_comma.cpp">
+      <Filter>소스 파일\0120%288일차%29</Filter>
+    </ClCompile>
+    <ClCompile Include="day8_gift_giver.cpp">
+      <Filter>소스 파일\0120%288일차%29</Filter>
+    </ClCompile>
+    <ClCompile Include="8일차.cpp">
       <Filter>소스 파일\복습</Filter>
     </ClCompile>
   </ItemGroup>
